Harden player saving, avoid holding onto player objects async